samples/_failures_safe/1761390771_92f715_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67425d45.c: In function ‘tokenize’:
./samples/SAFE/__tmp_67425d45.c:159:28: error: expected ‘;’ at end of input
  159 |                 token.value
      |                            ^
      |                            ;
./samples/SAFE/__tmp_67425d45.c:159:17: error: expected declaration or statement at end of input
  159 |                 token.value
      |                 ^~~~~
./samples/SAFE/__tmp_67425d45.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67425d45.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67425d45.c:159:17: error: expected declaration or statement at end of input
